<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imv_video_thumb"
        android:layout_width="@dimen/min_width"
        android:layout_height="@dimen/min_height"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_12"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@color/colorPrimary"
        android:contentDescription="@string/img_video_thumb" />

    <TextView
        android:id="@+id/txv_trailer_title"
        android:layout_width="@dimen/min_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_8"
        android:fontFamily="@font/worksans_bold"
        android:textColor="@color/grey_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imv_share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imv_video_thumb"
        tools:text="Avengers: The Infinity War 2" />

    <ImageView
        android:id="@+id/imv_share"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_height"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintEnd_toEndOf="@+id/imv_video_thumb"
        app:layout_constraintTop_toBottomOf="@+id/imv_video_thumb"
        app:srcCompat="@drawable/ic_more"
        android:contentDescription="@string/share" />

    <ImageView
        android:id="@+id/imv_play_thumb"
        android:layout_width="@dimen/play_thumb"
        android:layout_height="@dimen/play_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/imv_video_thumb"
        app:layout_constraintEnd_toEndOf="@+id/imv_video_thumb"
        app:layout_constraintStart_toStartOf="@+id/imv_video_thumb"
        app:layout_constraintTop_toTopOf="@+id/imv_video_thumb"
        app:srcCompat="@drawable/ic_video_thumbnail"
        android:contentDescription="@string/play_thumb" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/txt_trailers"
        android:textSize="@dimen/txt_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider6"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/min_height"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/txv_see_all_trailers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/txt_see_all"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>