<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imv_review_person"
        android:layout_width="@dimen/review_person"
        android:layout_height="@dimen/min_height"
        android:contentDescription="@string/review_person"
        app:layout_constraintBottom_toBottomOf="@+id/txv_review_person"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/txv_review_person"
        app:srcCompat="@drawable/ic_review" />

    <TextView
        android:id="@+id/txv_review_body"
        android:layout_width="@dimen/min_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_8"
        android:ellipsize="end"
        android:fontFamily="@font/worksans_regular"
        android:maxLines="10"
        android:textAlignment="viewStart"
        android:textColor="@color/grey_600"
        android:textSize="@dimen/txt_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_review_person"
        tools:text="@string/review_placeholder" />

    <TextView
        android:id="@+id/txv_review_person"
        android:layout_width="@dimen/min_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_12"
        android:fontFamily="@font/worksans_bold"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/txt_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imv_review_person"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:text="Mr. Lorem Ipsum" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_32"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/txt_reviews"
        android:textColor="@color/grey_700"
        android:textSize="@dimen/txt_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="@dimen/divider_width"
        android:layout_height="@dimen/min_height"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/txv_see_all_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:fontFamily="@font/worksans_bold"
        android:text="@string/txt_see_all"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/txt_14"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>