<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white_yellow"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imv_video_thumbnail"
        android:layout_width="@dimen/trailer_img"
        android:layout_height="@dimen/min_height"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary"
        android:contentDescription="@string/img_video_thumb" />

    <ImageView
        android:id="@+id/imv_thumb_play"
        android:layout_width="@dimen/play_thumb_small"
        android:layout_height="@dimen/min_height"
        app:layout_constraintBottom_toBottomOf="@+id/imv_video_thumbnail"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/imv_video_thumbnail"
        app:layout_constraintStart_toStartOf="@+id/imv_video_thumbnail"
        app:layout_constraintTop_toTopOf="@+id/imv_video_thumbnail"
        app:srcCompat="@drawable/ic_video_thumbnail"
        android:contentDescription="@string/video_play" />

    <TextView
        android:id="@+id/txv_trailer_title"
        android:layout_width="@dimen/min_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/worksans_bold"
        android:textSize="@dimen/txt_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imv_video_thumbnail"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="The Avengers : Infinity War" />

    <TextView
        android:id="@+id/txv_trailer_type"
        android:layout_width="@dimen/min_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"
        android:fontFamily="@font/worksans_regular"
        android:textSize="@dimen/txt_12"
        app:layout_constraintEnd_toEndOf="@+id/txv_trailer_title"
        app:layout_constraintStart_toStartOf="@+id/txv_trailer_title"
        app:layout_constraintTop_toBottomOf="@+id/txv_trailer_title"
        tools:text="Trailer" />

    <ImageView
        android:id="@+id/imv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="@+id/imv_video_thumbnail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txv_trailer_type"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_more"
        android:contentDescription="@string/more" />
</android.support.constraint.ConstraintLayout>